# onu

./: .CMakeLists.txt  .gitattributes  .gitignore  .trash.7z  2048.html  CMakeLists.txt  LICENSE  Qt6-LICENSE  Qtdl.H  README.md  SECURITY.md  extense.H  game.html  home.html  main.cpp  main.cxx  main.qml  onu-0.1.deb  onu.H  onu.cpp  onu.svgz  r.cppcheck  resources.qrc  settings.Hxx  startpage.html  version-0.1beta.7z
Adblock-rules/: README.md
Configs/: README.md
Extensions/: README.md
Extensions/QrCode/: README.md
Extensions/QrCode/src/: CMakeLists.txt
Notices/: 0.5-NOTICE
Scripts/: README.md
Themes/: README.md
alpha/: onu-0.6.rpm  onu-0.6.tar.zst  onu_0.6.deb  readme.md
beta/: onu-0.2-source-code.7z  onu-0.2.deb  onu-0.4.deb  onu-0.5-source-code.7z  onu-0.5.deb  readme.md
dists/: build  onu.desktop.in  readme.md
dists/DBS/: appimage.sh  arch.sh  tgz.sh
dists/deb/: onu.desktop.in
dists/linux/arch/: onu.install
dists/linux/deb/: postrm
dists/linux/rpm/: postinst
dists/mac/: Info.plist
docs/: CONTRIBUTING.md  LICENSE  Qt6-LICENSE  SECURITY.md  SUPPORT.md
docs/LICENSES/: LICENSE.Chromium
ext/Onboard/: CMakeLists.txt  main.cxx
extensions/QrCode/: main.cxx
f/: extense.H  i.H  main.cxx  onu.H  r.cppcheck  settings.Hxx
f/.trasg/: plugin_host
f/.trasg/extensions/QrCode/: main.cxx
f/dists/: CONF  README.txt
f/dists/DBS/: appimage.sh
f/dists/linux/arch/: onu.install
f/qrc/: about.html  dark.qss  game.html  test.html
legacy/: onu-0.5-LTS.x86_64.rpm  readme.md
onu/: CMakeLists.txt  README.md  main.cpp  onu.desktop.in  onu.desktop.in.autosave  resources.qrc
onu/themes/: dark.qss  light.qss
qrc/: about.html  home.html  light.qss  resbin.qrc  t.qrc  test.html
